doc/latex/create_doc_gen.c
/* A recursive-descent parser generated by peg 0.1.9 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 23
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( ctx->begin= ctx->pos, 1)
#endif
#ifndef YY_END
#define YY_END		( ctx->end= ctx->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *ctx, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *buf;
  int       buflen;
  int       pos;
  int       limit;
  char     *text;
  int       textlen;
  int       begin;
  int       end;
  int       textmax;
  yythunk  *thunks;
  int       thunkslen;
  int       thunkpos;
  YYSTYPE   yy;
  YYSTYPE  *val;
  YYSTYPE  *vals;
  int       valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext yyctx0;
yycontext *yyctx= &yyctx0;
#endif

YY_LOCAL(int) yyrefill(yycontext *ctx)
{
  int yyn;
  while (ctx->buflen - ctx->pos < 512)
    {
      ctx->buflen *= 2;
      ctx->buf= (char *)realloc(ctx->buf, ctx->buflen);
    }
  YY_INPUT((ctx->buf + ctx->pos), yyn, (ctx->buflen - ctx->pos));
  if (!yyn) return 0;
  ctx->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *ctx)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  ++ctx->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *ctx, int c)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  if ((unsigned char)ctx->buf[ctx->pos] == c)
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *ctx, char *s)
{
  int yysav= ctx->pos;
  while (*s)
    {
      if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
      if (ctx->buf[ctx->pos] != *s)
        {
          ctx->pos= yysav;
          return 0;
        }
      ++s;
      ++ctx->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *ctx, unsigned char *bits)
{
  int c;
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  c= (unsigned char)ctx->buf[ctx->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *ctx, yyaction action, int begin, int end)
{
  while (ctx->thunkpos >= ctx->thunkslen)
    {
      ctx->thunkslen *= 2;
      ctx->thunks= (yythunk *)realloc(ctx->thunks, sizeof(yythunk) * ctx->thunkslen);
    }
  ctx->thunks[ctx->thunkpos].begin=  begin;
  ctx->thunks[ctx->thunkpos].end=    end;
  ctx->thunks[ctx->thunkpos].action= action;
  ++ctx->thunkpos;
}

YY_LOCAL(int) yyText(yycontext *ctx, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (ctx->textlen < (yyleng + 1))
	{
	  ctx->textlen *= 2;
	  ctx->text= (char *)realloc(ctx->text, ctx->textlen);
	}
      memcpy(ctx->text, ctx->buf + begin, yyleng);
    }
  ctx->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *ctx)
{
  int pos;
  for (pos= 0;  pos < ctx->thunkpos;  ++pos)
    {
      yythunk *thunk= &ctx->thunks[pos];
      int yyleng= thunk->end ? yyText(ctx, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, ctx->text));
      thunk->action(ctx, ctx->text, yyleng);
    }
  ctx->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *ctx)
{
  if ((ctx->limit -= ctx->pos))
    {
      memmove(ctx->buf, ctx->buf + ctx->pos, ctx->limit);
    }
  ctx->begin -= ctx->pos;
  ctx->end -= ctx->pos;
  ctx->pos= ctx->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *ctx, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(ctx);
      yyCommit(ctx);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *ctx, char *text, int count)  { ctx->val += count; }
YY_LOCAL(void) yyPop(yycontext *ctx, char *text, int count)   { ctx->val -= count; }
YY_LOCAL(void) yySet(yycontext *ctx, char *text, int count)   { ctx->val[count]= ctx->yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(ctx, yythunkpos0)

YY_RULE(int) yy_comment(yycontext *ctx); /* 23 */
YY_RULE(int) yy_contentline(yycontext *ctx); /* 22 */
YY_RULE(int) yy_whitespace(yycontext *ctx); /* 21 */
YY_RULE(int) yy_modifiers(yycontext *ctx); /* 20 */
YY_RULE(int) yy_funcargs(yycontext *ctx); /* 19 */
YY_RULE(int) yy_funcnametype(yycontext *ctx); /* 18 */
YY_RULE(int) yy_functionfooter(yycontext *ctx); /* 17 */
YY_RULE(int) yy_functionheader(yycontext *ctx); /* 16 */
YY_RULE(int) yy_macroheader(yycontext *ctx); /* 15 */
YY_RULE(int) yy_linecontent(yycontext *ctx); /* 14 */
YY_RULE(int) yy_subsectiontitle(yycontext *ctx); /* 13 */
YY_RULE(int) yy_pluses(yycontext *ctx); /* 12 */
YY_RULE(int) yy_content(yycontext *ctx); /* 11 */
YY_RULE(int) yy_sectiontitle(yycontext *ctx); /* 10 */
YY_RULE(int) yy_blankline(yycontext *ctx); /* 9 */
YY_RULE(int) yy_stars(yycontext *ctx); /* 8 */
YY_RULE(int) yy_subgroupopening(yycontext *ctx); /* 7 */
YY_RULE(int) yy_function(yycontext *ctx); /* 6 */
YY_RULE(int) yy_EOL(yycontext *ctx); /* 5 */
YY_RULE(int) yy_groupopening(yycontext *ctx); /* 4 */
YY_RULE(int) yy_comments(yycontext *ctx); /* 3 */
YY_RULE(int) yy_group(yycontext *ctx); /* 2 */
YY_RULE(int) yy_start(yycontext *ctx); /* 1 */

YY_ACTION(void) yy_1_content(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_content\n"));
  
    fprintf(out, "%.*s", yyleng, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_macroheader(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_macroheader\n"));
  
    flint_printfuncheader(yytext, yyleng);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_functionheader(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_functionheader\n"));
  flint_printfuncheader(yytext, yyleng);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_subsectiontitle(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_subsectiontitle\n"));
  
    fprintf(out, "\\subsection{%.*s}\n", yyleng, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_sectiontitle(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_sectiontitle\n"));
  
    fprintf(out, "\\section{%.*s}\n", yyleng, yytext);;
#undef yythunkpos
#undef yypos
#undef yy
}

YY_RULE(int) yy_comment(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "comment"));  if (!yymatchString(ctx, "/*")) goto l1;
  l2:;	
  {  int yypos3= ctx->pos, yythunkpos3= ctx->thunkpos;
  {  int yypos4= ctx->pos, yythunkpos4= ctx->thunkpos;  if (!yymatchString(ctx, "*/")) goto l4;  goto l3;
  l4:;	  ctx->pos= yypos4; ctx->thunkpos= yythunkpos4;
  }  if (!yymatchDot(ctx)) goto l3;  goto l2;
  l3:;	  ctx->pos= yypos3; ctx->thunkpos= yythunkpos3;
  }  if (!yymatchString(ctx, "*/")) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "comment", ctx->buf+ctx->pos));
  return 1;
  l1:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comment", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_contentline(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "contentline"));  if (!yymatchString(ctx, "    ")) goto l5;  if (!yy_linecontent(ctx)) goto l5;  if (!yy_EOL(ctx)) goto l5;
  yyprintf((stderr, "  ok   %s @ %s\n", "contentline", ctx->buf+ctx->pos));
  return 1;
  l5:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "contentline", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_whitespace(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "whitespace"));
  {  int yypos9= ctx->pos, yythunkpos9= ctx->thunkpos;  if (!yymatchChar(ctx, ' ')) goto l10;  goto l9;
  l10:;	  ctx->pos= yypos9; ctx->thunkpos= yythunkpos9;  if (!yymatchChar(ctx, '\t')) goto l6;
  }
  l9:;	
  l7:;	
  {  int yypos8= ctx->pos, yythunkpos8= ctx->thunkpos;
  {  int yypos11= ctx->pos, yythunkpos11= ctx->thunkpos;  if (!yymatchChar(ctx, ' ')) goto l12;  goto l11;
  l12:;	  ctx->pos= yypos11; ctx->thunkpos= yythunkpos11;  if (!yymatchChar(ctx, '\t')) goto l8;
  }
  l11:;	  goto l7;
  l8:;	  ctx->pos= yypos8; ctx->thunkpos= yythunkpos8;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "whitespace", ctx->buf+ctx->pos));
  return 1;
  l6:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "whitespace", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_modifiers(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "modifiers"));
  {  int yypos14= ctx->pos, yythunkpos14= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l14;  goto l15;
  l14:;	  ctx->pos= yypos14; ctx->thunkpos= yythunkpos14;
  }
  l15:;	
  {  int yypos16= ctx->pos, yythunkpos16= ctx->thunkpos;  if (!yymatchString(ctx, "const")) goto l17;  goto l16;
  l17:;	  ctx->pos= yypos16; ctx->thunkpos= yythunkpos16;  if (!yymatchString(ctx, "(macro)")) goto l13;
  }
  l16:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "modifiers", ctx->buf+ctx->pos));
  return 1;
  l13:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "modifiers", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_funcargs(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "funcargs"));
  l19:;	
  {  int yypos20= ctx->pos, yythunkpos20= ctx->thunkpos;
  {  int yypos21= ctx->pos, yythunkpos21= ctx->thunkpos;  if (!yymatchChar(ctx, ')')) goto l21;  goto l20;
  l21:;	  ctx->pos= yypos21; ctx->thunkpos= yythunkpos21;
  }  if (!yymatchDot(ctx)) goto l20;  goto l19;
  l20:;	  ctx->pos= yypos20; ctx->thunkpos= yythunkpos20;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "funcargs", ctx->buf+ctx->pos));
  return 1;
}
YY_RULE(int) yy_funcnametype(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "funcnametype"));
  {  int yypos23= ctx->pos, yythunkpos23= ctx->thunkpos;
  {  int yypos24= ctx->pos, yythunkpos24= ctx->thunkpos;  if (!yymatchChar(ctx, '*')) goto l25;  goto l24;
  l25:;	  ctx->pos= yypos24; ctx->thunkpos= yythunkpos24;  if (!yymatchChar(ctx, '+')) goto l23;
  }
  l24:;	  goto l22;
  l23:;	  ctx->pos= yypos23; ctx->thunkpos= yythunkpos23;
  }
  l26:;	
  {  int yypos27= ctx->pos, yythunkpos27= ctx->thunkpos;
  {  int yypos28= ctx->pos, yythunkpos28= ctx->thunkpos;  if (!yymatchString(ctx, "operator()")) goto l29;  goto l28;
  l29:;	  ctx->pos= yypos28; ctx->thunkpos= yythunkpos28;
  {  int yypos30= ctx->pos, yythunkpos30= ctx->thunkpos;  if (!yymatchChar(ctx, '(')) goto l30;  goto l27;
  l30:;	  ctx->pos= yypos30; ctx->thunkpos= yythunkpos30;
  }  if (!yymatchDot(ctx)) goto l27;
  }
  l28:;	  goto l26;
  l27:;	  ctx->pos= yypos27; ctx->thunkpos= yythunkpos27;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "funcnametype", ctx->buf+ctx->pos));
  return 1;
  l22:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "funcnametype", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_functionfooter(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "functionfooter"));  if (!yy_content(ctx)) goto l31;
  yyprintf((stderr, "  ok   %s @ %s\n", "functionfooter", ctx->buf+ctx->pos));
  return 1;
  l31:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "functionfooter", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_functionheader(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "functionheader"));  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l32;  if (!yy_funcnametype(ctx)) goto l32;  if (!yymatchChar(ctx, '(')) goto l32;  if (!yy_funcargs(ctx)) goto l32;  if (!yymatchChar(ctx, ')')) goto l32;
  {  int yypos33= ctx->pos, yythunkpos33= ctx->thunkpos;  if (!yy_modifiers(ctx)) goto l33;  goto l34;
  l33:;	  ctx->pos= yypos33; ctx->thunkpos= yythunkpos33;
  }
  l34:;	
  {  int yypos35= ctx->pos, yythunkpos35= ctx->thunkpos;  if (!yymatchChar(ctx, ';')) goto l35;  goto l36;
  l35:;	  ctx->pos= yypos35; ctx->thunkpos= yythunkpos35;
  }
  l36:;	  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l32;
  {  int yypos37= ctx->pos, yythunkpos37= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l37;  goto l38;
  l37:;	  ctx->pos= yypos37; ctx->thunkpos= yythunkpos37;
  }
  l38:;	  if (!yy_EOL(ctx)) goto l32;  yyDo(ctx, yy_1_functionheader, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "functionheader", ctx->buf+ctx->pos));
  return 1;
  l32:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "functionheader", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_macroheader(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "macroheader"));  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l39;  if (!yymatchString(ctx, "macro")) goto l39;  if (!yy_whitespace(ctx)) goto l39;  if (!yy_linecontent(ctx)) goto l39;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l39;  if (!yy_EOL(ctx)) goto l39;  yyDo(ctx, yy_1_macroheader, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "macroheader", ctx->buf+ctx->pos));
  return 1;
  l39:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "macroheader", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_linecontent(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "linecontent"));
  l41:;	
  {  int yypos42= ctx->pos, yythunkpos42= ctx->thunkpos;
  {  int yypos43= ctx->pos, yythunkpos43= ctx->thunkpos;  if (!yy_EOL(ctx)) goto l43;  goto l42;
  l43:;	  ctx->pos= yypos43; ctx->thunkpos= yythunkpos43;
  }  if (!yymatchDot(ctx)) goto l42;  goto l41;
  l42:;	  ctx->pos= yypos42; ctx->thunkpos= yythunkpos42;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "linecontent", ctx->buf+ctx->pos));
  return 1;
}
YY_RULE(int) yy_subsectiontitle(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "subsectiontitle"));  if (!yymatchString(ctx, "    ")) goto l44;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l44;  if (!yy_linecontent(ctx)) goto l44;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l44;  if (!yy_EOL(ctx)) goto l44;  yyDo(ctx, yy_1_subsectiontitle, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "subsectiontitle", ctx->buf+ctx->pos));
  return 1;
  l44:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "subsectiontitle", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_pluses(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "pluses"));  if (!yymatchString(ctx, "+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++")) goto l45;  if (!yy_EOL(ctx)) goto l45;
  yyprintf((stderr, "  ok   %s @ %s\n", "pluses", ctx->buf+ctx->pos));
  return 1;
  l45:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "pluses", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_content(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "content"));  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l46;
  l47:;	
  {  int yypos48= ctx->pos, yythunkpos48= ctx->thunkpos;
  {  int yypos49= ctx->pos, yythunkpos49= ctx->thunkpos;  if (!yy_contentline(ctx)) goto l50;  goto l49;
  l50:;	  ctx->pos= yypos49; ctx->thunkpos= yythunkpos49;  if (!yy_blankline(ctx)) goto l48;
  }
  l49:;	  goto l47;
  l48:;	  ctx->pos= yypos48; ctx->thunkpos= yythunkpos48;
  }  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l46;  yyDo(ctx, yy_1_content, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "content", ctx->buf+ctx->pos));
  return 1;
  l46:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "content", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_sectiontitle(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "sectiontitle"));  if (!yymatchString(ctx, "    ")) goto l51;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_BEGIN)) goto l51;  if (!yy_linecontent(ctx)) goto l51;  yyText(ctx, ctx->begin, ctx->end);  if (!(YY_END)) goto l51;  if (!yy_EOL(ctx)) goto l51;  yyDo(ctx, yy_1_sectiontitle, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "sectiontitle", ctx->buf+ctx->pos));
  return 1;
  l51:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "sectiontitle", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_blankline(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "blankline"));
  {  int yypos53= ctx->pos, yythunkpos53= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l53;  goto l54;
  l53:;	  ctx->pos= yypos53; ctx->thunkpos= yythunkpos53;
  }
  l54:;	  if (!yy_EOL(ctx)) goto l52;
  yyprintf((stderr, "  ok   %s @ %s\n", "blankline", ctx->buf+ctx->pos));
  return 1;
  l52:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "blankline", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_stars(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "stars"));  if (!yymatchString(ctx, "*******************************************************************************")) goto l55;  if (!yy_EOL(ctx)) goto l55;
  yyprintf((stderr, "  ok   %s @ %s\n", "stars", ctx->buf+ctx->pos));
  return 1;
  l55:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "stars", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_subgroupopening(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "subgroupopening"));  if (!yy_pluses(ctx)) goto l56;
  {  int yypos57= ctx->pos, yythunkpos57= ctx->thunkpos;  if (!yy_blankline(ctx)) goto l57;  goto l58;
  l57:;	  ctx->pos= yypos57; ctx->thunkpos= yythunkpos57;
  }
  l58:;	  if (!yy_subsectiontitle(ctx)) goto l56;
  {  int yypos59= ctx->pos, yythunkpos59= ctx->thunkpos;  if (!yy_blankline(ctx)) goto l59;  goto l60;
  l59:;	  ctx->pos= yypos59; ctx->thunkpos= yythunkpos59;
  }
  l60:;	  if (!yy_content(ctx)) goto l56;  if (!yy_pluses(ctx)) goto l56;
  yyprintf((stderr, "  ok   %s @ %s\n", "subgroupopening", ctx->buf+ctx->pos));
  return 1;
  l56:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "subgroupopening", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_function(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "function"));
  {  int yypos62= ctx->pos, yythunkpos62= ctx->thunkpos;  if (!yy_macroheader(ctx)) goto l63;  goto l62;
  l63:;	  ctx->pos= yypos62; ctx->thunkpos= yythunkpos62;  if (!yy_functionheader(ctx)) goto l61;
  }
  l62:;	
  {  int yypos64= ctx->pos, yythunkpos64= ctx->thunkpos;  if (!yy_functionfooter(ctx)) goto l64;  goto l65;
  l64:;	  ctx->pos= yypos64; ctx->thunkpos= yythunkpos64;
  }
  l65:;	
  l66:;	
  {  int yypos67= ctx->pos, yythunkpos67= ctx->thunkpos;  if (!yy_EOL(ctx)) goto l67;  goto l66;
  l67:;	  ctx->pos= yypos67; ctx->thunkpos= yythunkpos67;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "function", ctx->buf+ctx->pos));
  return 1;
  l61:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "function", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_EOL(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos69= ctx->pos, yythunkpos69= ctx->thunkpos;  if (!yymatchString(ctx, "\r\n")) goto l70;  goto l69;
  l70:;	  ctx->pos= yypos69; ctx->thunkpos= yythunkpos69;  if (!yymatchChar(ctx, '\n')) goto l71;  goto l69;
  l71:;	  ctx->pos= yypos69; ctx->thunkpos= yythunkpos69;  if (!yymatchChar(ctx, '\r')) goto l68;
  }
  l69:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", ctx->buf+ctx->pos));
  return 1;
  l68:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_groupopening(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "groupopening"));  if (!yy_stars(ctx)) goto l72;  if (!yy_blankline(ctx)) goto l72;  if (!yy_sectiontitle(ctx)) goto l72;  if (!yy_blankline(ctx)) goto l72;  if (!yy_content(ctx)) goto l72;  if (!yy_stars(ctx)) goto l72;
  yyprintf((stderr, "  ok   %s @ %s\n", "groupopening", ctx->buf+ctx->pos));
  return 1;
  l72:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "groupopening", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_comments(yycontext *ctx)
{
  yyprintf((stderr, "%s\n", "comments"));
  l74:;	
  {  int yypos75= ctx->pos, yythunkpos75= ctx->thunkpos;
  {  int yypos76= ctx->pos, yythunkpos76= ctx->thunkpos;  if (!yy_whitespace(ctx)) goto l77;  goto l76;
  l77:;	  ctx->pos= yypos76; ctx->thunkpos= yythunkpos76;  if (!yy_EOL(ctx)) goto l78;  goto l76;
  l78:;	  ctx->pos= yypos76; ctx->thunkpos= yythunkpos76;  if (!yy_comment(ctx)) goto l75;
  }
  l76:;	  goto l74;
  l75:;	  ctx->pos= yypos75; ctx->thunkpos= yythunkpos75;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "comments", ctx->buf+ctx->pos));
  return 1;
}
YY_RULE(int) yy_group(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "group"));  if (!yy_comments(ctx)) goto l79;  if (!yy_groupopening(ctx)) goto l79;  if (!yy_comments(ctx)) goto l79;
  l80:;	
